# Federated-Learning-Platform

./: .env.example  .gitignore  README.md  demo_server.py  docker-compose.yml  pyproject.toml  requirements.txt  run_simulation.py
clients/: __init__.py  base_client.py  hospital_client.py
clients/data_handlers/: __init__.py  dicom_handler.py  fhir_handler.py
config/: __init__.py  constants.py  settings.py
database/: __init__.py  connection.py  crud.py  models.py  schema.sql
database/migrations/: alembic.ini  env.py
deployment/: Dockerfile.client  Dockerfile.server
models/: __init__.py  medical_cnn.py  model_utils.py
monitoring/: __init__.py  audit.py  metrics.py
orchestration/: __init__.py  coordinator.py
privacy/: __init__.py  dp_sgd.py  gradient_clipping.py  noise_injection.py  privacy_accountant.py
server/: __init__.py  app.py  federated_server.py  main.py
server/strategies/: __init__.py  fed_avg.py
tests/: __init__.py  conftest.py  test_models.py  test_privacy.py
